--- a/templates/adminindex.html
+++ b/templates/adminindex.html
@@ -182,14 +182,14 @@
 									
 									<div class="responsive">	
 										<img src="static/images/feature_img_3.png" alt="" />
-										<h4><strong>A N Geervani Reddy</strong></h4>
-										<h9>Third Year IT Student</h9>
-										<p>Grno: 21911194 & Rollno: 331001</p>
-										<a href="mailto:geervani.21911194@viit.ac.in">
+										<h4><strong>Rishabh Gupta</strong></h4>
+										<h9>Second Year COE Student</h9>
+										<p>Grno: 3 & Rollno: 102003051</p>
+										<a href="mailto:rgupta4_be20@thapar.edu">
 											<i class="far fa-envelope" style="font-size:24px;color:black"></i></a>
-										<a href="https://www.linkedin.com/in/geervani-reddy">
+										<a href="https://www.linkedin.com/in/rgpro">
 											<i class="fab fa-linkedin" style="font-size:24px;color:blue"></i></a>
-										<a href="https://github.com/Geervanireddy16">
+										<a href="https://github.com/rgtechpro">
 											<i class="fab fa-github" style="font-size:24px;color:black"></i></a>							
 									</div>
 								</div>
