--- a/templates/home.html
+++ b/templates/home.html
@@ -168,14 +168,14 @@
 								<div class="service">
 									<div class="customize">			
 										<img src="static/images/feature_img_3.png" alt="" />
-										<h4><strong>Shyam Aher</strong></h4>
-										<h9>Third Year Information Technology</h9>
-										<p>Grno: 21910485 & Rollno: 331003</p>
-										<a href="mailto:shyam.21910485@viit.ac.in">
+										<h4><strong>Karan Singh Thakur</strong></h4>
+										<h9>Second Year COE student</h9>
+										<p>Grno: 3 & Rollno: 102183048</p>
+										<a href="mailto:kthakur1_be20@thapar.edu">
 											<i class="far fa-envelope" style="font-size:24px;color:black"></i></a>
-										<a href="https://www.linkedin.com/in/shyam-aher-034434191">
+										<a href="https://www.linkedin.com/in/karan-singh-thakur-34735020b/">
 											<i class="fab fa-linkedin" style="font-size:24px;color:blue"></i></a>
-										<a href="https://github.com/Shyam17360">
+										<a href="https://github.com/karanthakur13">
 											<i class="fab fa-github" style="font-size:24px;color:black"></i></a>								
 									</div>
 								</div>
@@ -184,14 +184,14 @@
 								<div class="service">
 									<div class="support">	
 										<img src="static/images/feature_img_3.png" alt="" />
-										<h4><strong>Sakshi Gaikwad</strong></h4>
-										<h9>Third Year Information Technology</h9>
-										<p>Grno: 21910485 & Rollno: 331003</p>
-										<a href="mailto:sakshi.21910962@viit.ac.in">
+										<h4><strong>Ansh Gupta</strong></h4>
+										<h9>Second Year COE student</h9>
+										<p>Grno: 3 & Rollno: 102003752 </p>
+										<a href="mailto:anshgupta231001@gmail.com">
 											<i class="far fa-envelope" style="font-size:24px;color:black"></i></a>
-										<a href="https://www.linkedin.com/in/sakshi-gaikwad-bb5b0a197">
+										<a href="https://www.linkedin.com/in/ansh-gupta-b9956a208/">
 											<i class="fab fa-linkedin" style="font-size:24px;color:blue"></i></a>
-										<a href="https://github.com/Sakshi238">
+										<a href="https://github.com/Ansh231001">
 											<i class="fab fa-github" style="font-size:24px;color:black"></i></a>			
 									</div>
 								</div>
@@ -200,14 +200,30 @@
 								<div class="service">
 									<div class="support">	
 										<img src="static/images/feature_img_3.png" alt="" />
-										<h4><strong>Kartik Hiremath</strong></h4>
-										<h9>Third Year Information Technology</h9>
-										<p>Grno: 21910485 & Rollno: 331003</p>
-										<a href="mailto:kartik.21910418@viit.ac.in">
+										<h4><strong>Riddhi Aggarwal</strong></h4>
+										<h9>Second Year COE student</h9>
+										<p>Grno: 3 & Rollno: 102003048 </p>
+										<a href="mailto:ridhi794@gmail.com">
 											<i class="far fa-envelope" style="font-size:24px;color:black"></i></a>
-										<a href="https://www.linkedin.com/in/kartik-hiremath-54b410121">
+										<a href="https://www.linkedin.com/in/ridhhi-aggarwal-07932a208/">
 											<i class="fab fa-linkedin" style="font-size:24px;color:blue"></i></a>
-										<a href="https://github.com/kartikraj">
+										<a href="https://github.com/ridhhi794">
+											<i class="fab fa-github" style="font-size:24px;color:black"></i></a>	
+									</div>
+								</div>
+							</div>	
+							<div class="span3">
+								<div class="service">
+									<div class="support">	
+										<img src="static/images/feature_img_3.png" alt="" />
+										<h4><strong>Abha Himani</strong></h4>
+										<h9>Second Year COE student</h9>
+										<p>Grno: 3 & Rollno: 102183054 </p>
+										<a href="mailto:ahimani_be20@thapar.edu">
+											<i class="far fa-envelope" style="font-size:24px;color:black"></i></a>
+										<a href="https://www.linkedin.com/in/abha-himani-564102213/">
+											<i class="fab fa-linkedin" style="font-size:24px;color:blue"></i></a>
+										<a href="https://github.com/AbhaHimani">
 											<i class="fab fa-github" style="font-size:24px;color:black"></i></a>	
 									</div>
 								</div>
